	Fixed bug where resizing of the window on WebKit browsers in fullscreen mode wouldn't position the statusbar correctly.
	Fixed bug where IE would produce an error if the editor was empty and you where undoing to that initial level.
	Fixed bug where setting the table background on gecko would produce \" entities inside the url style property.
Version 3.3.6 (2010-05-20)
	Fixed bug where a editor.focus call could produce errors on IE in very specific scenarios.
	Fixed bug where Gecko would produce an error if you unformatted text inside an empty element.
	Fixed bug where IE would produce an error if the caret was placed before a table and you used the align buttons.
	Fixed bug where the font size drop down didn't display the a preview correctly.
	Fixed bug where the paste plugin wouldn't include all contents some times on WebKit browsers.
	Fixed bug where the plain text mode toggle wouldn't work properly on WebKit.
	Fixed bug where the editors statusbar would become invisible when you resized the window in fullscreen mode.
Version 3.3.5.1 (2010-05-07)
	Fixed a critical bug with the fullscreen plugin. Produced error messages when the state was toggled on/off.
Version 3.3.5 (2010-05-06)
	Added new merge_with_parents option to formats, enables the control of removal of elements with similar parents.
	Fixed so the default behavior for applying classes isn't a toggle state but the old behavior from before the 3.3 release.
	Fixed bug where selecting contents using double click on Gecko would produce errors when using removing format.
	Fixed bug where the IE DOM could get messed up when non valid contents was pasted into the editor.
	Fixed bug where merging selected table cells using the context menu didn't work as expected.
	Fixed bug where some nestled formatting would be applied incorrectly.
	Fixed bug with enter in list items when using the force_br_newlines mode on WebKit patch contributed by Ryan Koopmans.